--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
         <p>アバターが常に表示されています。</p>
     </div>
 
+    
+    <script
+        type="module"
+        src="https://agent.d-id.com/v1/index.js"
+        data-name="did-agent"
+        data-mode="fabio"
+        data-client-key="YXV0aDB8NjcwZTQzNTdmMGU2NTY5YTFiMTMxZDg1OmJMSmhVLTNtRDNiemxWSTlKaWp4SQ=="
+        data-agent-id="agt_sDvBioCO"
+        data-monitor="true">
+    </script>
+    
 </body>
 </html>
