--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script
         type="module"
+        input="好きな食べ物はなんですか？"
         src="https://agent.d-id.com/v1/index.js"
         data-name="did-agent"
         data-mode="fabio"
